# LectureProject-django

./: .gitignore  Lecture_Data.json  PyYAML-6.0-cp311-cp311-win32.whl  README.md  generate_mock_data.py  lecture_loader.py  manage.py  pyproject.toml  secrect.json  seed_lectures.py  typing_inspect-0.8.0-py3-none-any.whl
QnAs/: admin.py  apps.py  models.py
QnAs/migrations/: 0001_initial.py  0002_initial.py  0003_alter_qna_lecture.py
account/: models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py
accounts/: views.py
activities/: admin.py  models.py  serializers.py  urls.py  views.py
activities/migrations/: 0001_initial.py  0002_activite_information_activite_user.py  0002_initial.py  0003_initial.py
cart/: admin.py  models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_alter_cart_options_cart_user.py  0002_initial.py  0003_initial.py  0004_rename_cart_cartm.py  0004_rename_cart_numcart.py  (+3 more)
categories/: admin.py  models.py  serializers.py
common/: models.py
config/: authentication.py  my_settings.py  settings.py  urls.py
feeds/: models.py
informations/: admin.py  models.py  serializers.py  urls.py  views.py
lectures/: admin.py  models.py  serializers.py  urls.py  views.py
ledetailes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
videos/: admin.py  models.py  serializers.py  urls.py  views.py
watchedlectures/: models.py  views.py
(+47 files in other folders)
